# LeonOS

./: Cargo.toml  Makefile  README.md  diagnostics.bat
.trae/rules/: project_rules.md
common/src/: assert.rs  encoding.rs  vga.rs
docs/: mkdocs.yml
docs/docs/: about.md  index.md
docs/site/: 404.html  index.html
docs/site/about/: index.html
docs/site/search/: search_index.json
echo/: echo.json
iso/boot/grub/: grub.cfg
kernel/: Cargo.toml  kernel.json
kernel/src/: init.rs  interrupt.rs  lib.rs  main.rs  process.rs  time.rs  version.rs
kernel/src/device/: mod.rs
kernel/src/filesystem/: dir_entry.rs
kernel/src/shell/: cmd.rs  cmd_cat.rs  cmd_date.rs  cmd_dispatcher.rs  cmd_echo.rs  cmd_executor.rs  cmd_grep.rs  cmd_hello.rs  cmd_ls.rs  cmd_psend.rs  cmd_version.rs  mod.rs  my_shell.rs
kernel/src/sys_call/: mod.rs  sys_call.rs  sys_call_api.rs  sys_call_proxy.rs  writer.rs
loader2/src/: main.rs
mbr/: Cargo.toml  mbr-linker.ld
